+ UriUtils添加encode方法